--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -46,3 +46,16 @@ button, .button {
     color: $white;
     border: 0;
 }
+
+.hide-for-mobile {
+    @include breakpoint-down(small){
+        display: none;
+    }
+}
+
+.hide-for-desktop {
+    @include breakpoint-up(medium){
+        display:none;
+    }
+
+}
