--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -15,11 +15,24 @@ body {
     font-size: $font-med;
     color: $grayishBlue;
     font-weight: 300;
+
+    &.noscroll {
+        overflow: hidden;
+    }
 }
 
 a, a:link, a:hover, a:visited {
     text-decoration: none;
 }
+
+// Spacing
+
+.container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+
 
 //Flexbox styles
 .flex {
