--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,7 +1,42 @@
 .header {
 
+    // Hamburger open styles
+
+    &.open {
+
+        .header__toggle {
+
+            > span:first-child {
+                transform: rotate(45deg);
+
+            }
+
+            > span:nth-child(2) {
+                opacity: 0;
+            }
+
+            >span:last-child {
+                transform: rotate(-45deg);
+
+            }
+
+        }
+    }
+
+    .overlay {
+        position:fixed;
+        top:3.75rem;
+        right:0px;
+        bottom: 0px;
+        left:0px;  
+        //background-color: $darkBlue;
+        background-image: linear-gradient($darkBlue, transparent);
+        
+    }
+
     nav {
-        padding: 1.06rem 24px;
+       padding-top: 1.0625rem;
+       padding-bottom: 1.0625rem;
     }
 
 
@@ -11,18 +46,24 @@
 
     }
 
-    &__menu {  //mobile menu
+    &__toggle {  //mobile menu
 
         > span {
             display:block;
             height:2px;
             width:26px;
             background-color: $darkBlue;
+            transition: all 300ms ease-in-out;
+            transform-origin: 3px 1px;
             
             &:not(:last-child) {
-                margin-bottom:3px;
+                margin-bottom:5px;
             }
         }
+
+
+
+
     }
 
     &__links {
@@ -78,4 +119,29 @@
         }
 
     }
+
+    &__menu {
+        position: absolute;
+        width: calc(100% - 3rem);
+        left: 50%;
+        transform: translateX(-50%);
+        background: $white;
+        margin-top  : 1.5rem;
+        padding: 1.625rem;
+        border-radius: 5px;
+
+        a {
+            display: block;
+            padding: 0.625rem;
+            color: $darkBlue;
+            text-align: center;
+        }
+
+    }
+
+
+
 }
+
+
+
