--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -10,5 +10,6 @@ $white: hsl(0, 0%, 100%);
 $font-sm: 0.875rem;   //14px
 $font-med: 1.125rem;  //18px
 $font-lrg: 1.25rem;   //20px
+$font-xlg: 3.25rem;   //32px
 
 $gradient: linear-gradient(to right, $limeGreen , $brightCyan);
