--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -89,14 +89,27 @@ body {
 body.noscroll {
   overflow: hidden;
 }
+@media (min-width: 64em) {
+  body {
+    font-size: 1.125rem;
+  }
+}
+
+h1, h2, h3 {
+  margin-top: 0;
+}
 
 a, a:link, a:hover, a:visited {
   text-decoration: none;
 }
 
 .container {
+  padding-top: 2.25rem;
   padding-left: 1.5rem;
+  padding-bottom: 2.25rem;
   padding-right: 1.5rem;
+  max-width: 69.675rem;
+  margin: 0 auto;
 }
 
 .flex {
@@ -119,6 +132,12 @@ button, .button {
   background-image: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
   color: hsl(0deg, 0%, 100%);
   border: 0;
+  display: inline-block;
+  opacity: 1;
+  transition: opacity 300ms ease-in-out;
+}
+button:hover, .button:hover {
+  opacity: 0.75;
 }
 
 @media (max-width: 39.9375em) {
@@ -198,13 +217,6 @@ button, .button {
   opacity: 1;
   height: 5px;
 }
-.header__cta {
-  opacity: 1;
-  transition: opacity 300ms ease-in-out;
-}
-.header__cta:hover {
-  opacity: 0.75;
-}
 .header__menu {
   position: absolute;
   width: calc(100% - 3rem);
@@ -220,4 +232,71 @@ button, .button {
   padding: 0.625rem;
   color: hsl(233deg, 26%, 24%);
   text-align: center;
+}
+
+.hero {
+  background-color: hsl(0deg, 0%, 98%);
+}
+@media (min-width: 64em) {
+  .hero {
+    display: flex;
+    align-items: center;
+  }
+}
+.hero__image {
+  position: relative;
+  background-image: url("/images/bg-intro-mobile.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 17.5rem;
+  background-position: center center;
+}
+@media (min-width: 64em) {
+  .hero__image {
+    flex: 3;
+    order: 2;
+    height: 100%;
+    min-height: 41rem;
+    background-image: url("/images/bg-intro-desktop.svg");
+    background-position: center bottom;
+  }
+}
+.hero__image::before {
+  content: "";
+  position: absolute;
+  background-image: url("/images/image-mockups.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  height: 100%;
+  width: 96%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.hero__text {
+  text-align: center;
+}
+@media (min-width: 64em) {
+  .hero__text {
+    flex: 2;
+    order: 1;
+    text-align: left;
+  }
+}
+.hero__text h1 {
+  font-weight: 300;
+  font-size: 2.31rem;
+  line-height: 1.15;
+  color: hsl(233deg, 26%, 24%);
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 64em) {
+  .hero__text h1 {
+    font-size: 3.25rem;
+    text-align: left;
+  }
+}
+.hero__text p {
+  line-height: 1.5;
+  margin-bottom: 2.25rem;
 }/*# sourceMappingURL=style.css.map */
