--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -41,7 +41,7 @@ a, a:link, a:hover, a:visited {
     padding-left: 1.5rem;
     padding-bottom: 2.25rem;
     padding-right: 1.5rem;
-    max-width: 69.675rem;
+    // max-width: 69.675rem;
     margin: 0 auto;
 }
 
