--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -17,6 +17,11 @@
         background-repeat: no-repeat;
         min-height: 17.5rem;
         background-position: center center;
+
+        @include breakpoint-up(medium){
+            min-height: 25rem;
+            background-position: center 70%;
+        }
         
         @include breakpoint-up(large){
             flex: 3;
@@ -24,21 +29,34 @@
             height: 100%;
             min-height: 41rem;
             background-image: url('/images/bg-intro-desktop.svg');
-            background-position: center bottom;
+            background-size: 130%;
+            background-repeat: no-repeat;
+            background-position: 0% 83%;
         }
 
-        &::before {
+        &::after {
             content: "";
             position: absolute;
+            width: 100%;
+            height: 100%;
             background-image: url('/images/image-mockups.png');
-            background-size: cover;
+            background-size: 93%;
             background-repeat: no-repeat;
             background-position: center bottom;
-            //min-height: 20rem;
-            height:100%;
-            width:96%;
-            left: 50%;
-            transform: translateX(-50%);
+
+            @include breakpoint-up(medium){
+                background-size: 50%;
+            }
+            
+            @include breakpoint-up(large) {
+            height: 122%;
+            width: 120%;
+            background-size: 94%;
+            background-repeat: no-repeat;
+            left: 22%;
+            background-position: center 150%;
+            }
+
         }
 
     }
