--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -108,7 +108,6 @@ a, a:link, a:hover, a:visited {
   padding-left: 1.5rem;
   padding-bottom: 2.25rem;
   padding-right: 1.5rem;
-  max-width: 69.675rem;
   margin: 0 auto;
 }
 
@@ -251,6 +250,12 @@ button:hover, .button:hover {
   min-height: 17.5rem;
   background-position: center center;
 }
+@media (min-width: 40em) {
+  .hero__image {
+    min-height: 25rem;
+    background-position: center 70%;
+  }
+}
 @media (min-width: 64em) {
   .hero__image {
     flex: 3;
@@ -258,20 +263,35 @@ button:hover, .button:hover {
     height: 100%;
     min-height: 41rem;
     background-image: url("/images/bg-intro-desktop.svg");
-    background-position: center bottom;
+    background-size: 130%;
+    background-repeat: no-repeat;
+    background-position: 0% 83%;
   }
 }
-.hero__image::before {
+.hero__image::after {
   content: "";
   position: absolute;
+  width: 100%;
+  height: 100%;
   background-image: url("/images/image-mockups.png");
-  background-size: cover;
+  background-size: 93%;
   background-repeat: no-repeat;
   background-position: center bottom;
-  height: 100%;
-  width: 96%;
-  left: 50%;
-  transform: translateX(-50%);
+}
+@media (min-width: 40em) {
+  .hero__image::after {
+    background-size: 50%;
+  }
+}
+@media (min-width: 64em) {
+  .hero__image::after {
+    height: 122%;
+    width: 120%;
+    background-size: 94%;
+    background-repeat: no-repeat;
+    left: 22%;
+    background-position: center 150%;
+  }
 }
 .hero__text {
   text-align: center;
