--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -20,6 +20,8 @@
     &__logo {
         padding-bottom: 2rem;
         grid-area: logo;
+        margin-left: auto;
+        margin-right: auto;
 
     }
 
